[gd_scene load_steps=3 format=3 uid="uid://hamqyb4xlm7m"]

[ext_resource type="Script" path="res://Assets/Scripts/Inventory/inventory_ui_box.gd" id="1_cfkau"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_oe0w3"]
size = Vector2(32, 32)

[node name="InventoryUIBox" type="TextureRect"]
clip_contents = true
texture = SubResource("PlaceholderTexture2D_oe0w3")
script = ExtResource("1_cfkau")

[node name="ItemTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemCount" type="Label" parent="."]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 10
text = "99"
horizontal_alignment = 2
vertical_alignment = 2
clip_text = true
